src/observer/sql/parser/yacc_sql.output
Terminals unused in grammar

    PATH
    STRING_V


Grammar

    0 $accept: commands $end

    1 commands: ε
    2         | commands command

    3 command: select
    4        | insert
    5        | update
    6        | delete
    7        | create_table
    8        | drop_table
    9        | show_tables
   10        | desc_table
   11        | create_index
   12        | drop_index
   13        | sync
   14        | begin
   15        | commit
   16        | rollback
   17        | load_data
   18        | help
   19        | exit

   20 exit: EXIT SEMICOLON

   21 help: HELP SEMICOLON

   22 sync: SYNC SEMICOLON

   23 begin: TRX_BEGIN SEMICOLON

   24 commit: TRX_COMMIT SEMICOLON

   25 rollback: TRX_ROLLBACK SEMICOLON

   26 drop_table: DROP TABLE ID SEMICOLON

   27 show_tables: SHOW TABLES SEMICOLON

   28 desc_table: DESC ID SEMICOLON

   29 create_index: CREATE INDEX ID ON ID LBRACE ID RBRACE SEMICOLON

   30 drop_index: DROP INDEX ID SEMICOLON

   31 create_table: CREATE TABLE ID LBRACE attr_def attr_def_list RBRACE SEMICOLON

   32 attr_def_list: ε
   33              | COMMA attr_def attr_def_list

   34 attr_def: ID_get type LBRACE number RBRACE
   35         | ID_get type

   36 number: NUMBER

   37 type: INT_T
   38     | STRING_T
   39     | FLOAT_T
   40     | DATE_T

   41 ID_get: ID

   42 insert: INSERT INTO ID VALUES LBRACE value value_list RBRACE SEMICOLON

   43 value_list: ε
   44           | COMMA value value_list

   45 value: NUMBER
   46      | FLOAT
   47      | DATE_STR
   48      | SSS

   49 delete: DELETE FROM ID where SEMICOLON

   50 update: UPDATE ID SET ID EQ value where SEMICOLON

   51 select: SELECT select_attr FROM ID rel_list where SEMICOLON

   52 select_attr: STAR
   53            | ID attr_list
   54            | ID DOT ID attr_list

   55 attr_list: ε
   56          | COMMA ID attr_list
   57          | COMMA ID DOT ID attr_list

   58 rel_list: ε
   59         | COMMA ID rel_list

   60 where: ε
   61      | WHERE condition condition_list

   62 condition_list: ε
   63               | AND condition condition_list

   64 condition: ID comOp value
   65          | value comOp value
   66          | ID comOp ID
   67          | value comOp ID
   68          | ID DOT ID comOp value
   69          | value comOp ID DOT ID
   70          | ID DOT ID comOp ID DOT ID

   71 comOp: EQ
   72      | LT
   73      | GT
   74      | LE
   75      | GE
   76      | NE

   77 load_data: LOAD DATA INFILE SSS INTO TABLE ID SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    SEMICOLON (258) 20 21 22 23 24 25 26 27 28 29 30 31 42 49 50 51 77
    CREATE (259) 29 31
    DROP (260) 26 30
    TABLE (261) 26 31 77
    TABLES (262) 27
    INDEX (263) 29 30
    SELECT (264) 51
    DESC (265) 28
    SHOW (266) 27
    SYNC (267) 22
    INSERT (268) 42
    DELETE (269) 49
    UPDATE (270) 50
    LBRACE (271) 29 31 34 42
    RBRACE (272) 29 31 34 42
    COMMA (273) 33 44 56 57 59
    TRX_BEGIN (274) 23
    TRX_COMMIT (275) 24
    TRX_ROLLBACK (276) 25
    INT_T (277) 37
    DATE_T (278) 40
    STRING_T (279) 38
    FLOAT_T (280) 39
    HELP (281) 21
    EXIT (282) 20
    DOT (283) 54 57 68 69 70
    INTO (284) 42 77
    VALUES (285) 42
    FROM (286) 49 51
    WHERE (287) 61
    AND (288) 63
    SET (289) 50
    ON (290) 29
    LOAD (291) 77
    DATA (292) 77
    INFILE (293) 77
    EQ (294) 50 71
    LT (295) 72
    GT (296) 73
    LE (297) 74
    GE (298) 75
    NE (299) 76
    NUMBER <number> (300) 36 45
    FLOAT <floats> (301) 46
    ID <string> (302) 26 28 29 30 31 41 42 49 50 51 53 54 56 57 59 64 66 67 68 69 70 77
    DATE_STR <string> (303) 47
    PATH <string> (304)
    SSS <string> (305) 48 77
    STAR <string> (306) 52
    STRING_V <string> (307)


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    commands (54)
        on left: 1 2
        on right: 0 2
    command (55)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19
        on right: 2
    exit (56)
        on left: 20
        on right: 19
    help (57)
        on left: 21
        on right: 18
    sync (58)
        on left: 22
        on right: 13
    begin (59)
        on left: 23
        on right: 14
    commit (60)
        on left: 24
        on right: 15
    rollback (61)
        on left: 25
        on right: 16
    drop_table (62)
        on left: 26
        on right: 8
    show_tables (63)
        on left: 27
        on right: 9
    desc_table (64)
        on left: 28
        on right: 10
    create_index (65)
        on left: 29
        on right: 11
    drop_index (66)
        on left: 30
        on right: 12
    create_table (67)
        on left: 31
        on right: 7
    attr_def_list (68)
        on left: 32 33
        on right: 31 33
    attr_def (69)
        on left: 34 35
        on right: 31 33
    number <number> (70)
        on left: 36
        on right: 34
    type <number> (71)
        on left: 37 38 39 40
        on right: 34 35
    ID_get (72)
        on left: 41
        on right: 34 35
    insert (73)
        on left: 42
        on right: 4
    value_list (74)
        on left: 43 44
        on right: 42 44
    value <value1> (75)
        on left: 45 46 47 48
        on right: 42 44 50 64 65 67 68 69
    delete (76)
        on left: 49
        on right: 6
    update (77)
        on left: 50
        on right: 5
    select (78)
        on left: 51
        on right: 3
    select_attr (79)
        on left: 52 53 54
        on right: 51
    attr_list (80)
        on left: 55 56 57
        on right: 53 54 56 57
    rel_list (81)
        on left: 58 59
        on right: 51 59
    where (82)
        on left: 60 61
        on right: 49 50 51
    condition_list (83)
        on left: 62 63
        on right: 61 63
    condition <condition1> (84)
        on left: 64 65 66 67 68 69 70
        on right: 61 63
    comOp (85)
        on left: 71 72 73 74 75 76
        on right: 64 65 66 67 68 69 70
    load_data (86)
        on left: 77
        on right: 17


State 0

    0 $accept: • commands $end

    $default  reduce using rule 1 (commands)

    commands  go to state 1


State 1

    0 $accept: commands • $end
    2 commands: commands • command

    $end          shift, and go to state 2
    CREATE        shift, and go to state 3
    DROP          shift, and go to state 4
    SELECT        shift, and go to state 5
    DESC          shift, and go to state 6
    SHOW          shift, and go to state 7
    SYNC          shift, and go to state 8
    INSERT        shift, and go to state 9
    DELETE        shift, and go to state 10
    UPDATE        shift, and go to state 11
    TRX_BEGIN     shift, and go to state 12
    TRX_COMMIT    shift, and go to state 13
    TRX_ROLLBACK  shift, and go to state 14
    HELP          shift, and go to state 15
    EXIT          shift, and go to state 16
    LOAD          shift, and go to state 17

    command       go to state 18
    exit          go to state 19
    help          go to state 20
    sync          go to state 21
    begin         go to state 22
    commit        go to state 23
    rollback      go to state 24
    drop_table    go to state 25
    show_tables   go to state 26
    desc_table    go to state 27
    create_index  go to state 28
    drop_index    go to state 29
    create_table  go to state 30
    insert        go to state 31
    delete        go to state 32
    update        go to state 33
    select        go to state 34
    load_data     go to state 35


State 2

    0 $accept: commands $end •

    $default  accept


State 3

   29 create_index: CREATE • INDEX ID ON ID LBRACE ID RBRACE SEMICOLON
   31 create_table: CREATE • TABLE ID LBRACE attr_def attr_def_list RBRACE SEMICOLON

    TABLE  shift, and go to state 36
    INDEX  shift, and go to state 37


State 4

   26 drop_table: DROP • TABLE ID SEMICOLON
   30 drop_index: DROP • INDEX ID SEMICOLON

    TABLE  shift, and go to state 38
    INDEX  shift, and go to state 39


State 5

   51 select: SELECT • select_attr FROM ID rel_list where SEMICOLON

    ID    shift, and go to state 40
    STAR  shift, and go to state 41

    select_attr  go to state 42


State 6

   28 desc_table: DESC • ID SEMICOLON

    ID  shift, and go to state 43


State 7

   27 show_tables: SHOW • TABLES SEMICOLON

    TABLES  shift, and go to state 44


State 8

   22 sync: SYNC • SEMICOLON

    SEMICOLON  shift, and go to state 45


State 9

   42 insert: INSERT • INTO ID VALUES LBRACE value value_list RBRACE SEMICOLON

    INTO  shift, and go to state 46


State 10

   49 delete: DELETE • FROM ID where SEMICOLON

    FROM  shift, and go to state 47


State 11

   50 update: UPDATE • ID SET ID EQ value where SEMICOLON

    ID  shift, and go to state 48


State 12

   23 begin: TRX_BEGIN • SEMICOLON

    SEMICOLON  shift, and go to state 49


State 13

   24 commit: TRX_COMMIT • SEMICOLON

    SEMICOLON  shift, and go to state 50


State 14

   25 rollback: TRX_ROLLBACK • SEMICOLON

    SEMICOLON  shift, and go to state 51


State 15

   21 help: HELP • SEMICOLON

    SEMICOLON  shift, and go to state 52


State 16

   20 exit: EXIT • SEMICOLON

    SEMICOLON  shift, and go to state 53


State 17

   77 load_data: LOAD • DATA INFILE SSS INTO TABLE ID SEMICOLON

    DATA  shift, and go to state 54


State 18

    2 commands: commands command •

    $default  reduce using rule 2 (commands)


State 19

   19 command: exit •

    $default  reduce using rule 19 (command)


State 20

   18 command: help •

    $default  reduce using rule 18 (command)


State 21

   13 command: sync •

    $default  reduce using rule 13 (command)


State 22

   14 command: begin •

    $default  reduce using rule 14 (command)


State 23

   15 command: commit •

    $default  reduce using rule 15 (command)


State 24

   16 command: rollback •

    $default  reduce using rule 16 (command)


State 25

    8 command: drop_table •

    $default  reduce using rule 8 (command)


State 26

    9 command: show_tables •

    $default  reduce using rule 9 (command)


State 27

   10 command: desc_table •

    $default  reduce using rule 10 (command)


State 28

   11 command: create_index •

    $default  reduce using rule 11 (command)


State 29

   12 command: drop_index •

    $default  reduce using rule 12 (command)


State 30

    7 command: create_table •

    $default  reduce using rule 7 (command)


State 31

    4 command: insert •

    $default  reduce using rule 4 (command)


State 32

    6 command: delete •

    $default  reduce using rule 6 (command)


State 33

    5 command: update •

    $default  reduce using rule 5 (command)


State 34

    3 command: select •

    $default  reduce using rule 3 (command)


State 35

   17 command: load_data •

    $default  reduce using rule 17 (command)


State 36

   31 create_table: CREATE TABLE • ID LBRACE attr_def attr_def_list RBRACE SEMICOLON

    ID  shift, and go to state 55


State 37

   29 create_index: CREATE INDEX • ID ON ID LBRACE ID RBRACE SEMICOLON

    ID  shift, and go to state 56


State 38

   26 drop_table: DROP TABLE • ID SEMICOLON

    ID  shift, and go to state 57


State 39

   30 drop_index: DROP INDEX • ID SEMICOLON

    ID  shift, and go to state 58


State 40

   53 select_attr: ID • attr_list
   54            | ID • DOT ID attr_list

    COMMA  shift, and go to state 59
    DOT    shift, and go to state 60

    $default  reduce using rule 55 (attr_list)

    attr_list  go to state 61


State 41

   52 select_attr: STAR •

    $default  reduce using rule 52 (select_attr)


State 42

   51 select: SELECT select_attr • FROM ID rel_list where SEMICOLON

    FROM  shift, and go to state 62


State 43

   28 desc_table: DESC ID • SEMICOLON

    SEMICOLON  shift, and go to state 63


State 44

   27 show_tables: SHOW TABLES • SEMICOLON

    SEMICOLON  shift, and go to state 64


State 45

   22 sync: SYNC SEMICOLON •

    $default  reduce using rule 22 (sync)


State 46

   42 insert: INSERT INTO • ID VALUES LBRACE value value_list RBRACE SEMICOLON

    ID  shift, and go to state 65


State 47

   49 delete: DELETE FROM • ID where SEMICOLON

    ID  shift, and go to state 66


State 48

   50 update: UPDATE ID • SET ID EQ value where SEMICOLON

    SET  shift, and go to state 67


State 49

   23 begin: TRX_BEGIN SEMICOLON •

    $default  reduce using rule 23 (begin)


State 50

   24 commit: TRX_COMMIT SEMICOLON •

    $default  reduce using rule 24 (commit)


State 51

   25 rollback: TRX_ROLLBACK SEMICOLON •

    $default  reduce using rule 25 (rollback)


State 52

   21 help: HELP SEMICOLON •

    $default  reduce using rule 21 (help)


State 53

   20 exit: EXIT SEMICOLON •

    $default  reduce using rule 20 (exit)


State 54

   77 load_data: LOAD DATA • INFILE SSS INTO TABLE ID SEMICOLON

    INFILE  shift, and go to state 68


State 55

   31 create_table: CREATE TABLE ID • LBRACE attr_def attr_def_list RBRACE SEMICOLON

    LBRACE  shift, and go to state 69


State 56

   29 create_index: CREATE INDEX ID • ON ID LBRACE ID RBRACE SEMICOLON

    ON  shift, and go to state 70


State 57

   26 drop_table: DROP TABLE ID • SEMICOLON

    SEMICOLON  shift, and go to state 71


State 58

   30 drop_index: DROP INDEX ID • SEMICOLON

    SEMICOLON  shift, and go to state 72


State 59

   56 attr_list: COMMA • ID attr_list
   57          | COMMA • ID DOT ID attr_list

    ID  shift, and go to state 73


State 60

   54 select_attr: ID DOT • ID attr_list

    ID  shift, and go to state 74


State 61

   53 select_attr: ID attr_list •

    $default  reduce using rule 53 (select_attr)


State 62

   51 select: SELECT select_attr FROM • ID rel_list where SEMICOLON

    ID  shift, and go to state 75


State 63

   28 desc_table: DESC ID SEMICOLON •

    $default  reduce using rule 28 (desc_table)


State 64

   27 show_tables: SHOW TABLES SEMICOLON •

    $default  reduce using rule 27 (show_tables)


State 65

   42 insert: INSERT INTO ID • VALUES LBRACE value value_list RBRACE SEMICOLON

    VALUES  shift, and go to state 76


State 66

   49 delete: DELETE FROM ID • where SEMICOLON

    WHERE  shift, and go to state 77

    $default  reduce using rule 60 (where)

    where  go to state 78


State 67

   50 update: UPDATE ID SET • ID EQ value where SEMICOLON

    ID  shift, and go to state 79


State 68

   77 load_data: LOAD DATA INFILE • SSS INTO TABLE ID SEMICOLON

    SSS  shift, and go to state 80


State 69

   31 create_table: CREATE TABLE ID LBRACE • attr_def attr_def_list RBRACE SEMICOLON

    ID  shift, and go to state 81

    attr_def  go to state 82
    ID_get    go to state 83


State 70

   29 create_index: CREATE INDEX ID ON • ID LBRACE ID RBRACE SEMICOLON

    ID  shift, and go to state 84


State 71

   26 drop_table: DROP TABLE ID SEMICOLON •

    $default  reduce using rule 26 (drop_table)


State 72

   30 drop_index: DROP INDEX ID SEMICOLON •

    $default  reduce using rule 30 (drop_index)


State 73

   56 attr_list: COMMA ID • attr_list
   57          | COMMA ID • DOT ID attr_list

    COMMA  shift, and go to state 59
    DOT    shift, and go to state 85

    $default  reduce using rule 55 (attr_list)

    attr_list  go to state 86


State 74

   54 select_attr: ID DOT ID • attr_list

    COMMA  shift, and go to state 59

    $default  reduce using rule 55 (attr_list)

    attr_list  go to state 87


State 75

   51 select: SELECT select_attr FROM ID • rel_list where SEMICOLON

    COMMA  shift, and go to state 88

    $default  reduce using rule 58 (rel_list)

    rel_list  go to state 89


State 76

   42 insert: INSERT INTO ID VALUES • LBRACE value value_list RBRACE SEMICOLON

    LBRACE  shift, and go to state 90


State 77

   61 where: WHERE • condition condition_list

    NUMBER    shift, and go to state 91
    FLOAT     shift, and go to state 92
    ID        shift, and go to state 93
    DATE_STR  shift, and go to state 94
    SSS       shift, and go to state 95

    value      go to state 96
    condition  go to state 97


State 78

   49 delete: DELETE FROM ID where • SEMICOLON

    SEMICOLON  shift, and go to state 98


State 79

   50 update: UPDATE ID SET ID • EQ value where SEMICOLON

    EQ  shift, and go to state 99


State 80

   77 load_data: LOAD DATA INFILE SSS • INTO TABLE ID SEMICOLON

    INTO  shift, and go to state 100


State 81

   41 ID_get: ID •

    $default  reduce using rule 41 (ID_get)


State 82

   31 create_table: CREATE TABLE ID LBRACE attr_def • attr_def_list RBRACE SEMICOLON

    COMMA  shift, and go to state 101

    $default  reduce using rule 32 (attr_def_list)

    attr_def_list  go to state 102


State 83

   34 attr_def: ID_get • type LBRACE number RBRACE
   35         | ID_get • type

    INT_T     shift, and go to state 103
    DATE_T    shift, and go to state 104
    STRING_T  shift, and go to state 105
    FLOAT_T   shift, and go to state 106

    type  go to state 107


State 84

   29 create_index: CREATE INDEX ID ON ID • LBRACE ID RBRACE SEMICOLON

    LBRACE  shift, and go to state 108


State 85

   57 attr_list: COMMA ID DOT • ID attr_list

    ID  shift, and go to state 109


State 86

   56 attr_list: COMMA ID attr_list •

    $default  reduce using rule 56 (attr_list)


State 87

   54 select_attr: ID DOT ID attr_list •

    $default  reduce using rule 54 (select_attr)


State 88

   59 rel_list: COMMA • ID rel_list

    ID  shift, and go to state 110


State 89

   51 select: SELECT select_attr FROM ID rel_list • where SEMICOLON

    WHERE  shift, and go to state 77

    $default  reduce using rule 60 (where)

    where  go to state 111


State 90

   42 insert: INSERT INTO ID VALUES LBRACE • value value_list RBRACE SEMICOLON

    NUMBER    shift, and go to state 91
    FLOAT     shift, and go to state 92
    DATE_STR  shift, and go to state 94
    SSS       shift, and go to state 95

    value  go to state 112


State 91

   45 value: NUMBER •

    $default  reduce using rule 45 (value)


State 92

   46 value: FLOAT •

    $default  reduce using rule 46 (value)


State 93

   64 condition: ID • comOp value
   66          | ID • comOp ID
   68          | ID • DOT ID comOp value
   70          | ID • DOT ID comOp ID DOT ID

    DOT  shift, and go to state 113
    EQ   shift, and go to state 114
    LT   shift, and go to state 115
    GT   shift, and go to state 116
    LE   shift, and go to state 117
    GE   shift, and go to state 118
    NE   shift, and go to state 119

    comOp  go to state 120


State 94

   47 value: DATE_STR •

    $default  reduce using rule 47 (value)


State 95

   48 value: SSS •

    $default  reduce using rule 48 (value)


State 96

   65 condition: value • comOp value
   67          | value • comOp ID
   69          | value • comOp ID DOT ID

    EQ  shift, and go to state 114
    LT  shift, and go to state 115
    GT  shift, and go to state 116
    LE  shift, and go to state 117
    GE  shift, and go to state 118
    NE  shift, and go to state 119

    comOp  go to state 121


State 97

   61 where: WHERE condition • condition_list

    AND  shift, and go to state 122

    $default  reduce using rule 62 (condition_list)

    condition_list  go to state 123


State 98

   49 delete: DELETE FROM ID where SEMICOLON •

    $default  reduce using rule 49 (delete)


State 99

   50 update: UPDATE ID SET ID EQ • value where SEMICOLON

    NUMBER    shift, and go to state 91
    FLOAT     shift, and go to state 92
    DATE_STR  shift, and go to state 94
    SSS       shift, and go to state 95

    value  go to state 124


State 100

   77 load_data: LOAD DATA INFILE SSS INTO • TABLE ID SEMICOLON

    TABLE  shift, and go to state 125


State 101

   33 attr_def_list: COMMA • attr_def attr_def_list

    ID  shift, and go to state 81

    attr_def  go to state 126
    ID_get    go to state 83


State 102

   31 create_table: CREATE TABLE ID LBRACE attr_def attr_def_list • RBRACE SEMICOLON

    RBRACE  shift, and go to state 127


State 103

   37 type: INT_T •

    $default  reduce using rule 37 (type)


State 104

   40 type: DATE_T •

    $default  reduce using rule 40 (type)


State 105

   38 type: STRING_T •

    $default  reduce using rule 38 (type)


State 106

   39 type: FLOAT_T •

    $default  reduce using rule 39 (type)


State 107

   34 attr_def: ID_get type • LBRACE number RBRACE
   35         | ID_get type •

    LBRACE  shift, and go to state 128

    $default  reduce using rule 35 (attr_def)


State 108

   29 create_index: CREATE INDEX ID ON ID LBRACE • ID RBRACE SEMICOLON

    ID  shift, and go to state 129


State 109

   57 attr_list: COMMA ID DOT ID • attr_list

    COMMA  shift, and go to state 59

    $default  reduce using rule 55 (attr_list)

    attr_list  go to state 130


State 110

   59 rel_list: COMMA ID • rel_list

    COMMA  shift, and go to state 88

    $default  reduce using rule 58 (rel_list)

    rel_list  go to state 131


State 111

   51 select: SELECT select_attr FROM ID rel_list where • SEMICOLON

    SEMICOLON  shift, and go to state 132


State 112

   42 insert: INSERT INTO ID VALUES LBRACE value • value_list RBRACE SEMICOLON

    COMMA  shift, and go to state 133

    $default  reduce using rule 43 (value_list)

    value_list  go to state 134


State 113

   68 condition: ID DOT • ID comOp value
   70          | ID DOT • ID comOp ID DOT ID

    ID  shift, and go to state 135


State 114

   71 comOp: EQ •

    $default  reduce using rule 71 (comOp)


State 115

   72 comOp: LT •

    $default  reduce using rule 72 (comOp)


State 116

   73 comOp: GT •

    $default  reduce using rule 73 (comOp)


State 117

   74 comOp: LE •

    $default  reduce using rule 74 (comOp)


State 118

   75 comOp: GE •

    $default  reduce using rule 75 (comOp)


State 119

   76 comOp: NE •

    $default  reduce using rule 76 (comOp)


State 120

   64 condition: ID comOp • value
   66          | ID comOp • ID

    NUMBER    shift, and go to state 91
    FLOAT     shift, and go to state 92
    ID        shift, and go to state 136
    DATE_STR  shift, and go to state 94
    SSS       shift, and go to state 95

    value  go to state 137


State 121

   65 condition: value comOp • value
   67          | value comOp • ID
   69          | value comOp • ID DOT ID

    NUMBER    shift, and go to state 91
    FLOAT     shift, and go to state 92
    ID        shift, and go to state 138
    DATE_STR  shift, and go to state 94
    SSS       shift, and go to state 95

    value  go to state 139


State 122

   63 condition_list: AND • condition condition_list

    NUMBER    shift, and go to state 91
    FLOAT     shift, and go to state 92
    ID        shift, and go to state 93
    DATE_STR  shift, and go to state 94
    SSS       shift, and go to state 95

    value      go to state 96
    condition  go to state 140


State 123

   61 where: WHERE condition condition_list •

    $default  reduce using rule 61 (where)


State 124

   50 update: UPDATE ID SET ID EQ value • where SEMICOLON

    WHERE  shift, and go to state 77

    $default  reduce using rule 60 (where)

    where  go to state 141


State 125

   77 load_data: LOAD DATA INFILE SSS INTO TABLE • ID SEMICOLON

    ID  shift, and go to state 142


State 126

   33 attr_def_list: COMMA attr_def • attr_def_list

    COMMA  shift, and go to state 101

    $default  reduce using rule 32 (attr_def_list)

    attr_def_list  go to state 143


State 127

   31 create_table: CREATE TABLE ID LBRACE attr_def attr_def_list RBRACE • SEMICOLON

    SEMICOLON  shift, and go to state 144


State 128

   34 attr_def: ID_get type LBRACE • number RBRACE

    NUMBER  shift, and go to state 145

    number  go to state 146


State 129

   29 create_index: CREATE INDEX ID ON ID LBRACE ID • RBRACE SEMICOLON

    RBRACE  shift, and go to state 147


State 130

   57 attr_list: COMMA ID DOT ID attr_list •

    $default  reduce using rule 57 (attr_list)


State 131

   59 rel_list: COMMA ID rel_list •

    $default  reduce using rule 59 (rel_list)


State 132

   51 select: SELECT select_attr FROM ID rel_list where SEMICOLON •

    $default  reduce using rule 51 (select)


State 133

   44 value_list: COMMA • value value_list

    NUMBER    shift, and go to state 91
    FLOAT     shift, and go to state 92
    DATE_STR  shift, and go to state 94
    SSS       shift, and go to state 95

    value  go to state 148


State 134

   42 insert: INSERT INTO ID VALUES LBRACE value value_list • RBRACE SEMICOLON

    RBRACE  shift, and go to state 149


State 135

   68 condition: ID DOT ID • comOp value
   70          | ID DOT ID • comOp ID DOT ID

    EQ  shift, and go to state 114
    LT  shift, and go to state 115
    GT  shift, and go to state 116
    LE  shift, and go to state 117
    GE  shift, and go to state 118
    NE  shift, and go to state 119

    comOp  go to state 150


State 136

   66 condition: ID comOp ID •

    $default  reduce using rule 66 (condition)


State 137

   64 condition: ID comOp value •

    $default  reduce using rule 64 (condition)


State 138

   67 condition: value comOp ID •
   69          | value comOp ID • DOT ID

    DOT  shift, and go to state 151

    $default  reduce using rule 67 (condition)


State 139

   65 condition: value comOp value •

    $default  reduce using rule 65 (condition)


State 140

   63 condition_list: AND condition • condition_list

    AND  shift, and go to state 122

    $default  reduce using rule 62 (condition_list)

    condition_list  go to state 152


State 141

   50 update: UPDATE ID SET ID EQ value where • SEMICOLON

    SEMICOLON  shift, and go to state 153


State 142

   77 load_data: LOAD DATA INFILE SSS INTO TABLE ID • SEMICOLON

    SEMICOLON  shift, and go to state 154


State 143

   33 attr_def_list: COMMA attr_def attr_def_list •

    $default  reduce using rule 33 (attr_def_list)


State 144

   31 create_table: CREATE TABLE ID LBRACE attr_def attr_def_list RBRACE SEMICOLON •

    $default  reduce using rule 31 (create_table)


State 145

   36 number: NUMBER •

    $default  reduce using rule 36 (number)


State 146

   34 attr_def: ID_get type LBRACE number • RBRACE

    RBRACE  shift, and go to state 155


State 147

   29 create_index: CREATE INDEX ID ON ID LBRACE ID RBRACE • SEMICOLON

    SEMICOLON  shift, and go to state 156


State 148

   44 value_list: COMMA value • value_list

    COMMA  shift, and go to state 133

    $default  reduce using rule 43 (value_list)

    value_list  go to state 157


State 149

   42 insert: INSERT INTO ID VALUES LBRACE value value_list RBRACE • SEMICOLON

    SEMICOLON  shift, and go to state 158


State 150

   68 condition: ID DOT ID comOp • value
   70          | ID DOT ID comOp • ID DOT ID

    NUMBER    shift, and go to state 91
    FLOAT     shift, and go to state 92
    ID        shift, and go to state 159
    DATE_STR  shift, and go to state 94
    SSS       shift, and go to state 95

    value  go to state 160


State 151

   69 condition: value comOp ID DOT • ID

    ID  shift, and go to state 161


State 152

   63 condition_list: AND condition condition_list •

    $default  reduce using rule 63 (condition_list)


State 153

   50 update: UPDATE ID SET ID EQ value where SEMICOLON •

    $default  reduce using rule 50 (update)


State 154

   77 load_data: LOAD DATA INFILE SSS INTO TABLE ID SEMICOLON •

    $default  reduce using rule 77 (load_data)


State 155

   34 attr_def: ID_get type LBRACE number RBRACE •

    $default  reduce using rule 34 (attr_def)


State 156

   29 create_index: CREATE INDEX ID ON ID LBRACE ID RBRACE SEMICOLON •

    $default  reduce using rule 29 (create_index)


State 157

   44 value_list: COMMA value value_list •

    $default  reduce using rule 44 (value_list)


State 158

   42 insert: INSERT INTO ID VALUES LBRACE value value_list RBRACE SEMICOLON •

    $default  reduce using rule 42 (insert)


State 159

   70 condition: ID DOT ID comOp ID • DOT ID

    DOT  shift, and go to state 162


State 160

   68 condition: ID DOT ID comOp value •

    $default  reduce using rule 68 (condition)


State 161

   69 condition: value comOp ID DOT ID •

    $default  reduce using rule 69 (condition)


State 162

   70 condition: ID DOT ID comOp ID DOT • ID

    ID  shift, and go to state 163


State 163

   70 condition: ID DOT ID comOp ID DOT ID •

    $default  reduce using rule 70 (condition)
